# clawbot

./: .gitignore  HANDOFF.md  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
config/: .gitkeep  default.yaml
docker/: Dockerfile.demo  autostart-tui.ps1  setup-demo.ps1
docs/: competitive-analysis.md
docs/plans/: 2026-02-04-winappdriver-integration-design.md
scripts/: install.ps1  install.sh  render-mermaid.ts
src/clawbot/: __init__.py  cli.py
src/clawbot/cua_bridge/: __init__.py  actions.py  agent.py  computer.py
src/clawbot/openclaw_skill/: __init__.py
src/clawbot/openclaw_skill/computer-use/: SKILL.md
src/clawbot/wizard/: config.py  demo.py  setup.py
src/deskpilot/: __init__.py  cli.py
src/deskpilot/cua_bridge/: __init__.py  actions.py  agent.py  computer.py  winappdriver.py
src/deskpilot/installer/: __init__.py  native.py  winappdriver.py
src/deskpilot/openclaw_skill/computer-use/: CRON.md  HEARTBEAT.md  MEMORY.md  SKILL.md  SOUL.md  USER.md
src/deskpilot/wizard/: __init__.py  config.py  demo.py  setup.py
tests/: __init__.py  conftest.py  test_cli.py  test_config.py  test_cua_bridge.py  test_winappdriver.py  test_wizard.py
tests/e2e/: __init__.py  test_docker_demo.py
